//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  userName String [not null]
  avatar String
  password Password
  profile ExtendedProfile
  contact Contact
  discordId String [unique]
  discordRefreshToken String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  boardEntries BoardEntry [not null]
  incomingMatchRequests MatchRequest [not null]
  outgoingMatchRequests MatchRequest [not null]
  challenger BoardEntry [not null]
  notifications Notification [not null]
}

Table ExtendedProfile {
  id Int [pk, increment]
  biography String [not null]
  faction String
  user User [not null]
  userId String [unique, not null]
}

Table Password {
  hash String [not null]
  user User [not null]
  userId String [unique, not null]
}

Table Contact {
  id String [pk]
  phone String
  discord String
  email String
  twitter String
  user User [not null]
  userId String [unique, not null]
}

Table BoardEntry {
  id String [pk]
  title String [not null]
  body String [not null]
  gameSystem String [not null]
  location String [not null]
  date DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  matchRequests MatchRequest [not null]
  status Int [not null, default: 0]
  challenger User
  challengerId String
}

Table MatchRequest {
  id String [pk]
  fromUser User [not null]
  fromUserId String [not null]
  toUser User [not null]
  toUserId String [not null]
  status Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  boardEntry BoardEntry [not null]
  boardEntryId String [not null]
}

Table Notification {
  id String [pk]
  type String [not null]
  readAt DateTime
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  userId String [not null]
}

Ref: ExtendedProfile.userId - User.id [delete: Cascade]

Ref: Password.userId - User.id [delete: Cascade]

Ref: Contact.userId - User.id [delete: Cascade]

Ref: BoardEntry.userId > User.id [delete: Cascade]

Ref: BoardEntry.challengerId > User.id [delete: Cascade]

Ref: MatchRequest.fromUserId > User.id [delete: Cascade]

Ref: MatchRequest.toUserId > User.id [delete: Cascade]

Ref: MatchRequest.boardEntryId > BoardEntry.id [delete: Cascade]

Ref: Notification.userId > User.id